<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.q.myweather.WeatherWindowActivity"
    android:orientation="vertical" >

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/StratW" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:text="@string/Server_respone"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/response_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Id"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/response_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Name"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/response_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/temperature"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/response_press"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Pressuere"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/response_hum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Humidity"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/respone_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Speed"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BACK"
        android:onClick="closeActivity"/>
</LinearLayout>